--- a/shippable.yml
+++ b/shippable.yml
@@ -147,15 +147,6 @@ jobs:
       - IN: u16cloall_img
       - IN: u16pytall_img
       - IN: u16nodall_img
-      - IN: u14nodall_img
-      - IN: u14pytall_img
-      - IN: u14cloall_img
-      - IN: u14golall_img
-      - IN: u14javall_img
-      - IN: u14scaall_img
-      - IN: u14ruball_img
-      - IN: u14phpall_img
-      - IN: u14cppall_img
       - IN: node_repo
       - IN: cexec_repo
       - IN: reqProc_x86_64_Ubuntu_16_04_prep
@@ -167,7 +158,7 @@ jobs:
             - ./basePack.sh u16baseami_prep ami_bits_access_cli
             - popd
     on_failure:
-      - script: cat IN/prepami_repo/gitRepo/u16Base/output.txt #TODO change to standard syntax
+      - script: cat $(shipctl get_resource_state prepami_repo)/u16Base/output.txt
 
 
   - name: baseami_patch
@@ -218,7 +209,7 @@ jobs:
             - ./basePatchPack.sh u16baseami_patch ami_bits_access_cli u16baseami_prep
             - popd
     on_failure:
-      - script: cat IN/prepami_repo/gitRepo/u16BasePatch/output.txt #TODO change to standard syntax
+      - script: cat $(shipctl get_resource_state prepami_repo)/u16BasePatch/output.txt #TODO change to standard syntax
 
   - name: finalami_prep
     type: runSh
@@ -236,6 +227,7 @@ jobs:
       - IN: ami_bits_access
         switch: off
       - IN: dry_dh_x86_64_Ubuntu_tag_push
+      - IN: dry_dh_x86_64_u16_tag_push
       - IN: genexec_tag_push
       - IN: gh_ship_repos_tag_push
       - IN: reports_tag_push
@@ -247,6 +239,34 @@ jobs:
             - popd
     on_failure:
       - script: cat /build/IN/prepami_repo/gitRepo/exec/output.txt
+
+  - name: u16finalami_prep
+    type: runSh
+    triggerMode: parallel
+    dependencyMode: strict
+    steps:
+      - IN: prepami_repo
+        switch: off
+      - IN: u16baseami_patch
+        switch: off
+      - IN: prod_release
+        switch: off
+      - IN: u16baseami_params
+        switch: off
+      - IN: ami_bits_access
+        switch: off
+      - IN: dry_dh_x86_64_u16_tag_push
+      - IN: genexec_tag_push
+      - IN: gh_ship_repos_tag_push
+      - IN: reports_tag_push
+      - TASK:
+          script:
+            - pushd $(shipctl get_resource_state "prepami_repo")
+            - cd exec
+            - ./execPack.sh u16finalami_prep prod_release u16baseami_patch ami_bits_access
+            - popd
+    on_failure:
+      - script: cat $(shipctl get_resource_state prepami_repo)/u16exec/output.txt
 
   - name: baseadmiralami_prep
     type: runSh
