--- a/shippable.yml
+++ b/shippable.yml
@@ -66,7 +66,7 @@ resources:
         SOURCE_AMI: "ami-603b1c1a"
         REGION: "us-east-1"
 
-  - name: centosbaseami_params
+  - name: c7baseami_params
     type: params
     version:
       params:
@@ -634,7 +634,7 @@ jobs:
       - script: cat output.txt
       - script: popd
 
-  - name: centosbaseami_prep
+  - name: c7baseami_prep
     type: runSh
     triggerMode: parallel
     dependencyMode: strict
@@ -643,7 +643,7 @@ jobs:
         switch: off
       - IN: ami_bits_access_cli
         switch: off
-      - IN: centosbaseami_params
+      - IN: c7baseami_params
         switch: off
       - IN: c7nodall_img
       - IN: c7cppall_img
@@ -656,11 +656,11 @@ jobs:
       - TASK:
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")
-            - cd centosBase
-            - ./centosBasePack.sh centosbaseami_prep ami_bits_access_cli
+            - cd c7Base
+            - ./basePack.sh c7baseami_prep ami_bits_access_cli
             - popd
     on_failure:
       - script: pushd $(shipctl get_resource_state "prepami_repo")
-      - script: cd centosBase
+      - script: cd c7Base
       - script: cat output.txt
       - script: popd
