--- a/shippable.yml
+++ b/shippable.yml
@@ -626,11 +626,39 @@ jobs:
             - cd windowsBase
             - sed -i "s/{{%WINRM_USERNAME%}}/$WINRM_USERNAME/g" ./bootstrap_win.txt
             - sed -i "s/{{%WINRM_PASSWORD%}}/$WINRM_PASSWORD/g" ./bootstrap_win.txt
-            - ./windowsBasePack.sh windowsbaseami_prep ami_bits_access_cli
+            - ./basePack.sh windowsbaseami_prep ami_bits_access_cli
             - popd
     on_failure:
       - script: pushd $(shipctl get_resource_state "prepami_repo")
       - script: cd windowsBase
+      - script: cat output.txt
+      - script: popd
+
+  - name: windowsbaseami_patch
+    type: runSh
+    triggerMode: parallel
+    dependencyMode: strict
+    steps:
+      - IN: prepami_repo
+        switch: off
+      - IN: ami_bits_access_cli
+        switch: off
+      - IN: windowsbaseami_params
+        switch: off
+      - IN: cexec_repo
+      - IN: node_repo
+      - IN: reqProc_x86_64_WindowsServer_2016_prep
+      - IN: ami_reqKick_repo
+      - IN: windowsbaseami_prep
+      - TASK:
+          script:
+            - pushd $(shipctl get_resource_state "prepami_repo")
+            - cd windowsBasePatch
+            - ./basePatchPack.sh windowsbaseami_patch ami_bits_access_cli windowsbaseami_prep
+            - popd
+    on_failure:
+      - script: pushd $(shipctl get_resource_state "prepami_repo")
+      - script: cd windowsBasePatch
       - script: cat output.txt
       - script: popd
 
