--- a/shippable.yml
+++ b/shippable.yml
@@ -620,6 +620,7 @@ jobs:
         switch: off
       - IN: windowsbaseami_winrm_keys
         switch: off
+      - IN: reqProc_x86_64_WindowsServer_2016_prep        
       - TASK:
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")
@@ -645,6 +646,8 @@ jobs:
         switch: off
       - IN: windowsbaseami_params
         switch: off
+      - IN: windowsbaseami_winrm_keys
+        switch: off
       - IN: cexec_repo
       - IN: node_repo
       - IN: reqProc_x86_64_WindowsServer_2016_prep
@@ -654,6 +657,8 @@ jobs:
           script:
             - pushd $(shipctl get_resource_state "prepami_repo")
             - cd windowsBasePatch
+            - sed -i "s/{{%WINRM_USERNAME%}}/$WINRM_USERNAME/g" ./bootstrap_win.txt
+            - sed -i "s/{{%WINRM_PASSWORD%}}/$WINRM_PASSWORD/g" ./bootstrap_win.txt
             - ./basePatchPack.sh windowsbaseami_patch ami_bits_access_cli windowsbaseami_prep
             - popd
     on_failure:
@@ -679,7 +684,7 @@ jobs:
       - IN: c7javall_img
       - IN: node_repo
       - IN: cexec_repo
-      - IN: reqProc_x86_64_Ubuntu_14_04_prep
+      - IN: reqProc_x86_64_Ubuntu_16_04_prep
       - IN: ami_reqKick_repo
       - TASK:
           script:
