--- a/shippable.yml
+++ b/shippable.yml
@@ -36,7 +36,6 @@ resources:
         SUBNET_ID: "subnet-6df12f24"
         SECURITY_GROUP_ID: "sg-f634518c"
         REGION: "us-east-1"
-        SHIPPABLE_NODE_INIT_SCRIPT: "x86_64__Ubuntu__14.04__Docker__17.06.sh"
 
   - name: u16baseami_params
     type: params
@@ -47,7 +46,6 @@ resources:
         SUBNET_ID: "subnet-6df12f24"
         SECURITY_GROUP_ID: "sg-f634518c"
         REGION: "us-east-1"
-        SHIPPABLE_NODE_INIT_SCRIPT: "x86_64__Ubuntu__16.04__Docker__17.06.sh"
 
   - name: admiralami_params
     type: params
@@ -59,13 +57,6 @@ resources:
         SECURITY_GROUP_ID: "sg-9df159f8"
         REGION: "us-east-1"
 
-  - name: windowsbaseami_params
-    type: params
-    version:
-      params:
-        SOURCE_AMI: "ami-603b1c1a"
-        REGION: "us-east-1"
-
   - name: c7baseami_params
     type: params
     version:
@@ -74,6 +65,13 @@ resources:
         VPC_ID: "vpc-266f3241"
         SUBNET_ID: "subnet-6df12f24"
         SECURITY_GROUP_ID: "sg-f634518c"
+        REGION: "us-east-1"
+
+  - name: windowsbaseami_params
+    type: params
+    version:
+      params:
+        SOURCE_AMI: "ami-603b1c1a"
         REGION: "us-east-1"
 
   - name: windowsbaseami_winrm_keys
@@ -667,6 +665,38 @@ jobs:
       - script: cat output.txt
       - script: popd
 
+  - name: windowsfinalami_prep
+    type: runSh
+    triggerMode: parallel
+    dependencyMode: strict
+    steps:
+      - IN: prepami_repo
+        switch: off
+      - IN: ami_bits_access
+        switch: off
+      - IN: windowsbaseami_params
+        switch: off
+      - IN: windowsbaseami_winrm_keys
+        switch: off
+      - IN: windowsbaseami_patch
+        switch: off
+      - IN: dry_dh_x86_64_Windows_tag_push
+      - IN: gh_ship_repos_tag_push
+      - IN: reports_tag_push
+      - TASK:
+          script:
+            - pushd $(shipctl get_resource_state "prepami_repo")
+            - cd windowsExec
+            - sed -i "s/{{%WINRM_USERNAME%}}/$WINRM_USERNAME/g" ./bootstrap_win.txt
+            - sed -i "s/{{%WINRM_PASSWORD%}}/$WINRM_PASSWORD/g" ./bootstrap_win.txt
+            - ./execPack.sh windowsfinalami_prep prod_release windowsbaseami_patch ami_bits_access
+            - popd
+    on_failure:
+      - script: pushd $(shipctl get_resource_state "prepami_repo")
+      - script: cd windowsExec
+      - script: cat output.txt
+      - script: popd
+  
   - name: c7baseami_prep
     type: runSh
     triggerMode: parallel
