--- a/shippable.yml
+++ b/shippable.yml
@@ -27,6 +27,11 @@ resources:
     type: integration
     integration: aws_prod_access
 
+  - name: ship_bits_gcp
+    type: cliConfig
+    versionTemplate:
+      region: "us-west1-a"
+
   - name: baseami_params
     type: params
     version:
@@ -93,6 +98,72 @@ resources:
       branch: master
 
 jobs:
+
+######################### GCP U16 Image ##################################
+  - name: trig_gcp_img_prep
+    type: runSh
+    steps:
+      - IN: u16cppall_img
+        switch: off
+      - IN: u16phpall_img
+        switch: off
+      - IN: u16ruball_img
+        switch: off
+      - IN: u16scaall_img
+        switch: off
+      - IN: u16javall_img
+        switch: off
+      - IN: u16golall_img
+        switch: off
+      - IN: u16cloall_img
+        switch: off
+      - IN: u16pytall_img
+        switch: off
+      - IN: u16nodall_img
+        switch: off
+      - IN: node_repo
+        switch: off
+      - IN: cexec_repo
+        switch: off
+      - IN: reqProc_x86_64_Ubuntu_16_04_prep
+        switch: off
+      - TASK:
+          script:
+            - ls -al
+
+  - name: u16_x86_64_gcp_img_prep
+    type: runSh
+    triggerMode: parallel
+    dependencyMode: strict
+    steps:
+      - IN: trig_gcp_img_prep
+      - IN: prepami_repo
+        switch: off
+      - IN: ship_bits_gcp
+        switch: off
+      - TASK:
+          name: prep_u16_gce_image
+          runtime:
+            options:
+              env:
+                - SOURCE_IMAGE_FAMILY: "ubuntu-1604-lts"
+                - MACHINE_TYPE: "n1-standard-8"
+                - REGION: "us-east1"
+                - ZONE: "us-east1-b"
+                - PROJECT_ID: "ship-bits"
+                - SERVICE_ACCOUNT_JSON: "gcp_key.json"
+                - SHIP_REL_VER: "master"
+          script:
+            - pushd $(shipctl get_resource_state "prepami_repo")/gcp/u16prep
+            - echo $(shipctl get_integration_resource_field ship_bits_gcp JSON_key) > $SERVICE_ACCOUNT_JSON
+            - export IMAGE_NAMES=$(cat images.txt)
+            - export IMAGE_NAMES_SPACED=$(eval echo $(tr '\n' ' ' < images.txt))
+            - packer validate -var service_account_json=$SERVICE_ACCOUNT_JSON -var region=$REGION -var source_image_family=$SOURCE_IMAGE_FAMILY -var machine_type=$MACHINE_TYPE -var zone=$ZONE -var project_id=$PROJECT_ID -var IMAGE_NAMES_SPACED="${IMAGE_NAMES_SPACED}" -var RES_IMG_VER_NAME=$SHIP_REL_VER -var RES_IMG_VER_NAME_DASH=$SHIP_REL_VER -var SHIP_REL_VER=$SHIP_REL_VER packer.json
+            - popd
+#    on_failure:
+#      - script: cat $(shipctl get_resource_state prepami_repo)/gcp/u16prep/output.txt
+
+######################### Admiral Image ##################################
   - name: baseadmiralami_prep
     type: runSh
     triggerMode: parallel
