--- a/shippable.yml
+++ b/shippable.yml
@@ -166,6 +166,7 @@ jobs:
     on_success:
       script:
         - shipctl put_resource_state_multi $JOB_NAME "versionName=$IMAGE_NAME" "RES_IMG_VER_NAME=$SHIP_REL_VER" "RES_IMG_VER_NAME_DASH=$SHIP_REL_VER" "IMAGE_NAMES_SPACED=$IMAGE_NAMES_SPACED"
+        - shipctl put_resource_state $JOB_NAME IMAGE_NAMES_SPACED $IMAGE_NAMES_SPACED
     on_failure:
       script:
         - cat $(shipctl get_resource_state prepami_repo)/gcp/u16prep/output.txt
